lasid-uece/lasid-uece-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lasid-uece
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: lasid_uece
  template:
    metadata:
      labels:
        app: lasid-uece
    spec:
      containers:
      - image: nginxdemos/hello:latest
        name: lasid-uece
        ports:
        - containerPort: 80
