lasid-uece/lasid-uece-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lasid-uece
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lasid-uece
