lasid-uece/lasid-uece-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lasid-uece
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - lasid.uece.br
      secretName: lasid.uece.br-secret
  rules:
    - host: "lasid.uece.br"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: lasid-uece
              port:
                number: 80
